# smellscapy

./: .gitignore  LICENSE  README.md  descriptive_statistics.csv  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: gh-pages.yml  publish-test.yml  publish.yml
docs/: index.md  license.md
docs/aknowledgments/: index.md
docs/citation/: index.md
docs/overview/: index.md
docs/quick_start/: index.md
docs/reference/: DataExample.md  calculations.md  descriptive_analysis.md  survey.md
docs/reference/analysis/: descriptive_analysis.md
docs/reference/plotting/: density.md  dynamic.md  scatter.md  simple_density.md  utils.md
docs/tutorials/: DataExample.csv  analysis.md  calculating_pleasantness_presence_coordinates.md  data_validation_processing.md  fullprojectexample.md  index.md  loading_smellscape_data.md  visualizations.md
docs/user_guide/: loading_smellscape_data.md
src/: main.py
src/smellscapy/: __init__.py  _version.py  calculations.py  constants.py  surveys.py
src/smellscapy/analysis/: descriptive_analysis.py
src/smellscapy/data/: DataExample copy 0.csv  DataExample copy 1.csv  DataExample copy 2.csv  DataExample copy 3.csv  DataExample.csv
src/smellscapy/databases/: DataExample.py  __init__.py
src/smellscapy/plotting/: density.py  dynamic.py  joint.py  scatter.py  simple_density.py  utils.py
tests/: test_basic.py  test_calculations.py  test_surveys.py
tests/database/: test_DataExample.py
tests/plotting/: test_plotting.py
