[project]
name = "smellscapy"
version = "0.1.0"
description = "A python library for analysing and representing indoor smellscape perceptual data."
readme = "README.md"
authors = [
  { name="Giulia Torriani", email="giulia.torriani@eurac.edu" },
  { name="Olga Somova", email="olga.somova@eurac.edu" }]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
]

[project.scripts]
smellscapy = "smellscapy:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.package-data]
smellscapy = ["data/*.csv"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "tox>=4.28.4",
]
